--- a/assets/styles/gloabl.css
+++ b/assets/styles/gloabl.css
@@ -55,6 +55,12 @@ h2 {
 .beverage-item:last-child {
     border-bottom: none;
 }
+.beers, .split-bill {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
 
 button {
     padding: 10px 15px;
@@ -68,6 +74,10 @@ button {
 
 button:hover {
     background-color: #0056b3;
+}
+.export-buttons button {
+    margin-bottom: 10px;
+    margin-right: 10px;
 }
 
 input[type="number"] {
@@ -108,8 +118,14 @@ input[type="number"] {
     list-style: none;
     padding: 5px 10px;
 }
+.order-summary p {
+    font-weight: 700;
+}
 @media only screen and (max-width: 450px) {
     button {
         width: 100%;
+    }
+    .export-buttons button {
+        margin-right: 0;
     }
 }
